[build-system]
requires = [
    "scikit-build-core>=0.12",
    "pybind11>=3.0",
    "numpy>=2.0",
    "includeigen>=0.1",
]
build-backend = "epcsaft_build_backend"
backend-path = ["build_backend"]

[project]
name = "epcsaft"
version = "0.2.0"
description = "The ePC-SAFT equation of state, including dipole, association, and ion terms."
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Tanner Polley" },
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
# Current source repository.
Homepage = "https://github.com/ePC-SAFT/ePC-SAFT"
Documentation = "https://epcsaft.readthedocs.io/en/latest/"
Repository = "https://github.com/ePC-SAFT/ePC-SAFT"

[dependency-groups]
test = [
    "matplotlib>=3.8",
    "pytest>=8.0",
    "pyyaml>=6.0",
]
style = [
    "black>=24.0",
    "ruff>=0.5",
]
docs = [
    "sphinx>=7.0",
]
build = [
    "build>=1.2",
    "cibuildwheel>=2.23",
    "cmake>=3.20",
    "includeigen>=0.1",
    "ninja>=1.11",
    "pybind11>=3.0",
    "scikit-build-core>=0.12",
]
dev = [
    { include-group = "test" },
    { include-group = "build" },
    { include-group = "style" },
    { include-group = "docs" },
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.uv.workspace]
members = [
    "packages/epcsaft-equilibrium",
    "packages/epcsaft-regression",
]

[tool.scikit-build]
minimum-version = "0.12"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/epcsaft"]
cmake.version = ">=3.20"
ninja.version = ">=1.11"

[tool.scikit-build.sdist]
include = [
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CMakeLists.txt",
    "build_backend/*.py",
    "src/epcsaft/**/*.py",
    "src/epcsaft/**/*.pyi",
    "src/epcsaft/**/*.cpp",
    "src/epcsaft/**/*.h",
    "tests/**/*.py",
]

[tool.pytest.ini_options]
pythonpath = ["src", "packages/epcsaft-equilibrium/src", "packages/epcsaft-regression/src"]
addopts = "-ra -p no:cacheprovider"
markers = [
    "native_contract: fast native metadata/result-contract tests that should not run broad solver route suites",
    "equilibrium_native_transition: root-owned native equilibrium tests kept with the monorepo native source until native targets split",
    "native_solver: native solver or route-builder tests that may run Ipopt or expensive route setup",
    "ipopt: tests that require or exercise native Ipopt route behavior",
    "slow: tests that are intentionally excluded from routine focused validation unless explicitly targeted",
]

[tool.black]
line-length = 120
target-version = ["py39"]
extend-exclude = '''
(
  ^/build/
  | ^/dist/
  | ^/docs/_build/
  | ^/docs/latex/out/
  | ^/docs/papers/
  | /out/
  | /results/runs/
  | /figures/.*/output/runs/
)
'''

[tool.ruff]
line-length = 120
target-version = "py39"
extend-exclude = [
    "build",
    "dist",
    "docs/_build",
    "docs/latex/out",
    "docs/papers",
    "**/out",
    "**/results/runs",
    "**/figures/**/output/runs",
]

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "I", "B", "UP", "NPY", "RUF"]
ignore = ["E402", "E501"]
