[build-system]
requires = [
  "Cython>=3.1,<3.2",
  "setuptools>=80,<81",
  "wheel>=0.45,<0.46",
]
build-backend = "setuptools.build_meta"

[project]
name = "cython-held2-experiment"
version = "0.0.1"
description = "Lab-only Cython dependency probe for a HELD2 experiment"
requires-python = ">=3.13,<3.14"
dependencies = [
  "cppad_py @ git+https://github.com/bradbell/cppad_py.git@76331e8690ae5f3af88a9e3f25971b0f476e4518",
  "cyipopt @ git+https://github.com/mechmotum/cyipopt.git@86ba79ef5efc59386f4a371924312bc10df54c0c",
  "numpy>=2.1,<3",
  "scipy>=1.15,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["cython_held2_experiment", "cython_held2_experiment.data"]

[tool.setuptools.package-data]
cython_held2_experiment = ["data/*.json"]

[[tool.setuptools.ext-modules]]
name = "cython_held2_experiment._smoke"
sources = ["src/cython_held2_experiment/_smoke.pyx"]

[[tool.setuptools.ext-modules]]
name = "cython_held2_experiment._thermo"
sources = ["src/cython_held2_experiment/_thermo.pyx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
